relay-general/src/pii/snapshots/tests__sanitize_additional_sensitive_fields.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "extra": {
    "a_password_here": "[Filtered]",
    "apiKey": "[Filtered]",
    "api_key": "[Filtered]",
    "fieldy_field": "[Filtered]",
    "foo": "bar",
    "moar_other_field": "[Filtered]",
    "password": "[Filtered]",
    "the_secret": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "a_password_here": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      },
      "apiKey": {
        "": {
          "rem": [
            [
              "remove-keywords",
              "s",
              0,
              10
            ]
          ],
          "len": 10
        }
      },
      "api_key": {
        "": {
          "rem": [
            [
              "remove-keywords",
              "s",
              0,
              10
            ]
          ],
          "len": 10
        }
      },
      "fieldy_field": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      },
      "moar_other_field": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 13
        }
      },
      "password": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      },
      "the_secret": {
        "": {
          "rem": [
            [
              "@anything:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      }
    }
  }
}
