relay-general/src/pii/snapshots/tests__sanitize_http_body_string.snap
---
source: relay-general/src/pii/convert.rs
expression: data.value().unwrap().request
---
{
  "data": "[Filtered]",
  "_meta": {
    "data": {
      "": {
        "rem": [
          [
            "remove-keywords",
            "s",
            0,
            10
          ]
        ],
        "len": 48
      }
    }
  }
}
