relay-general/src/pii/snapshots/tests__stacktrace.snap
---
source: relay-general/src/pii/convert.rs
expression: data
---
{
  "stacktrace": {
    "frames": [
      {
        "vars": {
          "a_password_here": "[Filtered]",
          "apiKey": "[Filtered]",
          "api_key": "[Filtered]",
          "foo": "bar",
          "password": "[Filtered]",
          "the_secret": "[Filtered]"
        }
      }
    ]
  },
  "_meta": {
    "stacktrace": {
      "frames": {
        "0": {
          "vars": {
            "a_password_here": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 5
              }
            },
            "apiKey": {
              "": {
                "rem": [
                  [
                    "remove-keywords",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 10
              }
            },
            "api_key": {
              "": {
                "rem": [
                  [
                    "remove-keywords",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 10
              }
            },
            "password": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 5
              }
            },
            "the_secret": {
              "": {
                "rem": [
                  [
                    "@anything:filter",
                    "s",
                    0,
                    10
                  ]
                ],
                "len": 5
              }
            }
          }
        }
      }
    }
  }
}
